--- a/css/styles.css
+++ b/css/styles.css
@@ -48,8 +48,10 @@
       margin: 0 auto;
       padding: 0 15px;
   }
-  .header {
+  .header .container{
     padding-top: 44px;
+    display: flex;
+    align-items: center;
   }
   .logo {
     color: var(--accent-color);
@@ -58,12 +60,20 @@
     line-height: 1.13;
     letter-spacing: 1.3px;
   }
+  .nav{
+  margin-left: auto;
+  }
+  .nav-list{
+    display: flex;
+    gap: 10px;
+  }
   .nav-link {
     color: var(--accent-color);
     font-size: 14px;
     line-height: 1.92x;
     text-transform: uppercase;
     text-decoration: none;
+    padding: 10px;
   }
   .nav-link:hover, 
   .nav-link:focus {
@@ -80,6 +90,11 @@
     line-height: 1.87;
     letter-spacing: -1px;
     text-transform: uppercase;
+  }
+  .services-list{
+    display: flex;
+    gap: 56px;
+    justify-content: center;
   }
   .services-item {
     color: var(--main-color);
@@ -107,6 +122,57 @@
           letter-spacing: -1px;
           text-transform: uppercase;
           text-align: center;
+  }
+  .contact-us-form {
+    display: flex;
+    align-items: center;
+   gap: 28px;
+   flex-wrap: wrap;
+  }
+  .contact-us-form-box {
+  display: flex;
+  flex-direction: column;
+  gap: 28px;
+  align-items: center;
+  }
+  .contact-us-input {
+    font-size: 14px;
+    font-weight: 700;
+    letter-spacing: -0.35px;
+    text-transform: uppercase;
+    display: flex;
+    gap: 28px;
+    padding: 12px 20px 21px;
+  }
+
+  .contact-us-input {
+    font-size: 14px;
+    font-weight: 700;
+    letter-spacing: -0.35px;
+    text-transform: uppercase;
+    width: 455px;
+    padding: 12px 20px 21px;
+  }
+  .contact-us-input {
+    font-size: 14px;
+    font-weight: 700;
+    letter-spacing: -0.35px;
+    text-transform: uppercase;
+    display: flex;
+    gap: 28px;
+    padding: 12px 20px 21px;
+    flex-basis: 455px;
+  }  
+  .contact-us-textarea {
+    font-size: 14px;
+    font-weight: 700;
+    letter-spacing: -0.35px;
+    text-transform: uppercase;
+    padding-top: 14px;
+    padding-left: 22px;
+    resize: none;
+    width: 458px;
+    height: 212px;
   }
   .contact-us-input::placeholder, 
   .contact-us-textarea::placeholder {
